--- a/africaeye.html
+++ b/africaeye.html
@@ -6,15 +6,14 @@
 <title>africaeye</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"> 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" >
-
+<link rel="shortcut icon" href="images/africaeye.ico">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 <link rel="stylesheet" href="css/africaeye.css">
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="JS/africaeye.js"></script>
-
-
 </head>
+
 <body>
 <div class="container">
     <div id="header">
